--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-svg-transformer": "^1.0.0",
+    "msw": "^1.2.1",
     "react-test-renderer": "^18.2.0",
     "vite": "^4.3.2"
   },
@@ -45,5 +46,8 @@
     "setupFilesAfterEnv": [
       "<rootDir>/setupTests.js"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
